# Couscous-raytracer

./: .editorconfig  .gitignore  CMakeLists.txt  Couscous-raytracer.pro  README.md
assets/: cube.off  plane.off  plane_sub_01.off  sphere_16_16.off  suzanne.off  torus_16_8.off  wall_window.off
icons/: icons.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ray.cpp  ray.h  render.cpp  render.h  usualshapes.cpp  usualshapes.h  visualobject.h  visualobjectlist.cpp  visualobjectlist.h
src/common/: logger.cpp  logger.h
src/gui/: dialogmaterial.cpp  dialogmaterial.h  dialogmaterial.ui  dialogmeshfile.cpp  dialogmeshfile.h  dialogmeshfile.ui  dialogobject.cpp  dialogobject.h  dialogobject.ui  frameviewer.cpp  frameviewer.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  scene.cpp  scene.h
src/io/: cscfileformat.cpp  cscfileformat.h  filereader.cpp  filereader.h  objfileformat.cpp  objfileformat.h  scenefilereader.cpp  scenefilereader.h
src/renderer/: aabb.cpp  aabb.h  camera.cpp  camera.h  gridaccelerator.cpp  gridaccelerator.h  kDTree.h  kDTree.hpp  material.cpp  material.h  photonMapping.cpp  photonMapping.h  ray.cpp  ray.h  render.cpp  render.h  rng.cpp  rng.h  samplegenerator.cpp  samplegenerator.h  utility.cpp  utility.h  visualobject.cpp  visualobject.h
src/test/: test.cpp  test.h
